--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
-*
-!.gitignore
-!/htdocs
+/bin
+/cgi-bin
+/conf
+/db
+/de
+/en
+/fcgi-bin
+/libs
+/licences
+/locales
+/logs
+/REDIST
+/runtimes
+/x64
+/x86
+**.dll
+**.dll.config
+**.xml
+**.exe
+**.exe.config
+**.dev
+**.json
+**.dev.json
+**.bin
+**.pri
+**.winmd
+**.dat
+**.msg
+**.pak
+**.config
